--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <h2><i>Where the passion comes from</i></h2>
             <h3>Unity3D</h3>
             <iframe src="https://www.youtube.com/embed/6Jn-br51BlU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Nx2gvoYmHGU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Nx2gvoYmHGU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <h3>Blender Game Engine</h3>
-            <iframe src="https://www.youtube.com/embed/hTHIwNxr-bU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hTHIwNxr-bU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <h3>Pure Java and OpenGL</h3>
-            <iframe src="https://www.youtube.com/embed/hSC8ZCLypdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hSC8ZCLypdI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <div class="section-back alt1">
@@ -134,13 +134,13 @@
                     </div>
                 </div>
                 <!-- Clio 1 -->
-                <div class="hex" data-image="https://i.imgur.com/SD7YvBs.png">
+                <div class="hex" data-image="https://i.imgur.com/SD7YvBs.png" data-caption="A render of the little car I used to have. Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/YT2NikT.jpg);"></div>
                     </div>
                 </div>
                 <!-- Clio 2 -->
-                <div class="hex" data-image="https://i.imgur.com/NwqQwWR.png">
+                <div class="hex" data-image="https://i.imgur.com/NwqQwWR.png" data-caption="A render of the little car I used to have. Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/YveZKNI.jpg);"></div>
                     </div>
@@ -156,19 +156,19 @@
                 <span class="hex-row-fill"></span>
                 <div class="half-hex"></div>
                 <!-- Crossbow -->
-                <div class="hex" data-image="https://i.imgur.com/kRBXRh2.png">
+                <div class="hex" data-image="https://i.imgur.com/kRBXRh2.png" data-caption="A compound crossbow design I made in SolidWorks based on Barnet Carbonlite crossbows. Render in Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/QrEz6zQ.png); background-color: lightseagreen;"></div>
                     </div>
                 </div>
                 <!-- 207cc -->
-                <div class="hex" data-image="https://i.imgur.com/jwCKuCW.jpg">
+                <div class="hex" data-image="https://i.imgur.com/jwCKuCW.jpg" data-caption="Render of a Peugeot 207cc. Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/AYgrB9l.jpg);"></div>
                     </div>
                 </div>
                 <!-- Huracan 3 -->
-                <div class="hex" data-image="https://i.imgur.com/Y1BIAes.png">
+                <div class="hex" data-image="https://i.imgur.com/Y1BIAes.png" data-caption="Lamborghini Huracan">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/vLe603k.jpg);"></div>
                     </div>
@@ -179,19 +179,19 @@
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
                 <!-- Huracan 4 -->
-                <div class="hex" data-image="https://i.imgur.com/9m1BxzZ.png">
+                <div class="hex" data-image="https://i.imgur.com/9m1BxzZ.png" data-caption="Lamborghini Huracan">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/W6Eh3LV.jpg);"></div>
                     </div>
                 </div>
                 <!-- Huracan 2 -->
-                <div class="hex" data-image="https://i.imgur.com/42LCwjF.png">
+                <div class="hex" data-image="https://i.imgur.com/42LCwjF.png" data-caption="Lamborghini Huracan">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/cacME2t.jpg);"></div>
                     </div>
                 </div>
                 <!-- Huracan 1 -->
-                <div class="hex" data-image="https://i.imgur.com/I8ciSve.png">
+                <div class="hex" data-image="https://i.imgur.com/I8ciSve.png" data-caption="Lamborghini Huracan">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/imYMkbd.jpg);"></div>
                     </div>
@@ -207,19 +207,19 @@
                 <span class="hex-row-fill"></span>
                 <div class="half-hex"></div>
                 <!-- Countach 2 -->
-                <div class="hex" data-image="https://i.imgur.com/aR4m89X.png">
+                <div class="hex" data-image="https://i.imgur.com/aR4m89X.png" data-caption="Lamborghini Countach. This one is pretty old.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/OZZJ01G.jpg);"></div>
                     </div>
                 </div>
                 <!-- Countach 1 -->
-                <div class="hex" data-image="https://i.imgur.com/H8Fo2AQ.jpg">
+                <div class="hex" data-image="https://i.imgur.com/H8Fo2AQ.jpg" data-caption="Lamborghini Countach. This one is pretty old.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/XjoO3Bf.jpg);"></div>
                     </div>
                 </div>
                 <!-- Guitar -->
-                <div class="hex" data-image="https://i.imgur.com/MVR4hut.jpg">
+                <div class="hex" data-image="https://i.imgur.com/MVR4hut.jpg" data-caption="Render of an electric guitar my uncle gave me. I was like 12y/o when I made this one.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/OW9B8L4.jpg);"></div>
                     </div>
