--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                     </div>
                 </div>
                 <!-- Clio 1 -->
-                <div class="hex" data-image="https://i.imgur.com/SD7YvBs.png" data-caption="A render of the little car I used to have. Blender Cycles.">
+                <div class="hex" data-image="https://i.imgur.com/SD7YvBs.png" data-caption="A render of the little car I used to have, Renault Clio Mio. Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/YT2NikT.jpg);"></div>
                     </div>
                 </div>
                 <!-- Clio 2 -->
-                <div class="hex" data-image="https://i.imgur.com/NwqQwWR.png" data-caption="A render of the little car I used to have. Blender Cycles.">
+                <div class="hex" data-image="https://i.imgur.com/NwqQwWR.png" data-caption="A render of the little car I used to have, Renault Clio Mio. Blender Cycles.">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/YveZKNI.jpg);"></div>
                     </div>
