Added all social links and some fixes

--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
         <h1>Emiliano Senega</h1>
         <h3>Master Learner</h3>
         <div class="main-navbar desktop">
-            <span>
-                <ul>
-                    <li><a>Home</a></li>
-                    <li><a onclick="document.getElementById('gamedev').scrollIntoView({behavior: 'smooth'});">Gamedev</a></li>
-                    <li><a onclick="document.getElementById('renders').scrollIntoView({behavior: 'smooth'});">Renders</a></li>
-                </ul>
-            </span>
-            <span class="separator"></span>
-            <span>
-                <ul class="hide-mobile">
-                    <li><a><i class="fab fa-twitter"></i></a></li>
-                    <li><a><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCnmMGOVv-UHsrAi9fQPIDag?disable_polymer=true"><i class="fab fa-youtube"></i></a></li>
-                    <li><a><i class="fab fa-github"></i></a></li>
-                </ul>
-            </span>
-            <span class="separator"></span>
-            <span>
-                <ul>
-                    <li class="li-right"><a onclick="document.getElementById('resume').scrollIntoView({behavior: 'smooth'});">Resume</a></li>
-                    <li class="li-right"><a onclick="document.getElementById('arduino').scrollIntoView({behavior: 'smooth'});">Arduino</a></li>
-                    <li class="li-right"><a onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});">Contact</a></li>
-                </ul>
-            </span>
+			<div>
+				<span>
+					<ul>
+						<li><a onclick="window.scroll({top:0, left:0, behavior:'smooth'});">Home</a></li>
+						<li><a onclick="document.getElementById('gamedev').scrollIntoView({behavior: 'smooth'});">Gamedev</a></li>
+						<li><a onclick="document.getElementById('renders').scrollIntoView({behavior: 'smooth'});">Renders</a></li>
+					</ul>
+				</span>
+				<span class="separator"></span>
+				<span>
+					<ul class="hide-mobile">
+						<li><a href="https://twitter.com/emsenega"><i class="fab fa-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/emilianoasenega"><i class="fab fa-facebook-f"></i></a></li>
+						<li><a href="https://www.youtube.com/channel/UCnmMGOVv-UHsrAi9fQPIDag?disable_polymer=true"><i class="fab fa-youtube"></i></a></li>
+						<li><a href="https://github.com/Starkus"><i class="fab fa-github"></i></a></li>
+					</ul>
+				</span>
+				<span class="separator"></span>
+				<span>
+					<ul>
+						<li class="li-right"><a onclick="document.getElementById('resume').scrollIntoView({behavior: 'smooth'});">Resume</a></li>
+						<li class="li-right"><a onclick="document.getElementById('arduino').scrollIntoView({behavior: 'smooth'});">Arduino</a></li>
+						<li class="li-right"><a onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});">Contact</a></li>
+					</ul>
+				</span>
+			</div>
         </div>
         <div class="main-navbar mobile">
                 <ul>
@@ -86,7 +88,7 @@
         </span>
     </div>
     <div class="section-back">
-        <div class="section" id="gamedev" style="max-width: unset;">
+        <div class="section" id="gamedev" style="max-width: unset; text-align: center;">
             <h1>Gamedev</h1>
             <div class="little-divisor"></div>
             <h2><i>Where the passion comes from</i></h2>
@@ -353,10 +355,10 @@
     <div id="footer" style="clear:both;">
         <div style="background-color: rgba(255, 255, 255, 0.03);">
             <ul>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fab fa-facebook-f"></i></li>
-                <li><i class="fab fa-youtube"></i></li>
-                <li><i class="fab fa-github"></i></li>
+                <li><a href="https://www.twitter.com/emsenega"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/emilianoasenega"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCnmMGOVv-UHsrAi9fQPIDag?disable_polymer=true"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://github.com/Starkus"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
         <div>
