Added missing home link to mobile navbar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="main-navbar mobile">
                 <ul>
                     <a class="navbar-button" onclick="expandNavBar();">&#9776;</a>
-                    <li><a>Home</a></li>
+                    <li><a onclick="window.scroll({top:0, left:0, behavior:'smooth'});">Home</a></li>
                     <li><a onclick="document.getElementById('gamedev').scrollIntoView({behavior: 'smooth'}); expandNavBar();">Gamedev</a></li>
                     <li><a onclick="document.getElementById('renders').scrollIntoView({behavior: 'smooth'}); expandNavBar();">Renders</a></li>
                     <li class="li-right"><a onclick="document.getElementById('resume').scrollIntoView({behavior: 'smooth'}); expandNavBar();">Resume</a></li>
