--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </span>
     </div>
     <div class="section-back">
-        <div class="section" id="gamedev" style="max-width: unset; text-align: center;">
-            <h1>Gamedev</h1>
-            <div class="little-divisor"></div>
+        <div class="section fullwidth centered" id="gamedev">
+            <h1 class="fadein">Gamedev</h1>
+            <div class="little-divisor fadein"></div>
             <h2><i>Where the passion comes from</i></h2>
             <h3>Unity3D</h3>
             <iframe src="https://www.youtube.com/embed/6Jn-br51BlU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -102,9 +102,9 @@
         </div>
     </div>
     <div class="section-back alt1">
-        <div class="section alt1" id="renders" style="max-width: unset; padding-left: 0; padding-right: 0;">
-            <h1>Renders</h1>
-            <div class="little-divisor"></div>
+        <div class="section alt1 fullwidth" id="renders">
+            <h1 class="fadein">Renders</h1>
+            <div class="little-divisor fadein"></div>
             <h2><i>The section with pretty pictures</i></h2>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
@@ -234,8 +234,8 @@
     </div>
     <div class="section-back">
         <div class="section" id="resume">
-            <h1>My skills and expertise</h1>
-            <div class="little-divisor"></div>
+            <h1 class="fadein">My skills and expertise</h1>
+            <div class="little-divisor fadein"></div>
             <h2>I am a kid with a passion for Computer Science</h2>
             <div class="skill-bars">
                 <h3>Graphic skills</h3>
@@ -275,8 +275,8 @@
     </div>
     <div class="section-back alt1">
             <div class="section alt1" id="arduino">
-                <h1>Arduino Graphing Calculator</h1>
-                <div class="little-divisor"></div>
+                <h1 class="fadein">Arduino Graphing Calculator</h1>
+                <div class="little-divisor fadein"></div>
                 <h2><i>Couldn't you just buy one?</i></h2>
                 <img style="width: 100%;" src="https://i.imgur.com/JWjD0Jh.jpg">
                 <iframe style="width: 100%" src="https://www.youtube.com/embed/KsnkguX20EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -335,8 +335,8 @@
         </div>
         <div class="section-back">
             <div class="section" id="contact">
-                <h1>Contact</h1>
-                <div class="little-divisor"></div>
+                <h1 class="fadein">Contact</h1>
+                <div class="little-divisor fadein"></div>
                 <h2>Drop a hi in my inbox!</h2>
                 <form method="POST" action="contact.php">
                     <div id="name-email">
