--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header">
         <div id="header-back" data-scroll-speed="6"></div>
         <h1>Emiliano Senega</h1>
-        <h3>Programmer without a license</h3>
+        <h3>Game Developer Junior</h3>
         <div class="main-navbar desktop">
 			<div>
 				<span>
