--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <span>
                 <ul>
                     <li><strong>Birthdate:</strong> 1998-07-06</li>
-                    <li><strong>Phone:</strong> +54 011 33551105</li>
+                    <li><strong>Phone:</strong> -</li>
                     <li><strong>Email:</strong> emilianoalejosenega@gmail.com</li>
                     <li><strong>Website:</strong> This one</li>
                     <li><strong>Address:</strong> Tigre, Buenos Aires, Argentina</li>
